Prevent wrapping of chat onto new line

--- a/DuckDuckShoot/Content/Site.css
+++ b/DuckDuckShoot/Content/Site.css
@@ -44,7 +44,14 @@ span {
     display: block;
 }
 
-#container { width: 800px; height: 600px; position: relative; float: left; background-image: url('images/bg.png');}
+#mainContentDiv {
+    float: left;
+    padding-right: 10px;
+    overflow-x: auto;
+    white-space: nowrap;
+}
+
+#container { width: 800px; height: 600px; position: relative; display: inline-block; background-image: url('images/bg.png');}
 #center { width: 10px; height: 10px; position: absolute; left: 400px; top: 300px; background: #000; border-radius: 50%; }
 .field { position: absolute; }
 
@@ -73,7 +80,7 @@ margin-top:-15px;
 }
 
 #chatParent {
-    float: left;
+    display: inline-block;
     position: relative;
     width: 305px;
     height: 600px;
